Migrate users of Class.newInstance()
This method has been deprecated for removal since Java 9, migrate
the three call sites.

Change-Id: I7527ae2958c22e4f83e436c3293cc06abc1e4f65
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>