@@ -39,8 +39,8 @@ public abstract class EricMatchInfoHelper<T extends DataObject, B extends Builde
     public void createInnerMatchBuilder(Map<Class<?>, Object> mapMatchBuilder) {
         populateBuilder((B) mapMatchBuilder.computeIfAbsent(builderClass, key -> {
             try {
-                return builderClass.newInstance();
-            } catch (InstantiationException | IllegalAccessException e) {
+                return builderClass.getDeclaredConstructor().newInstance();
+            } catch (ReflectiveOperationException e) {
                 throw new IllegalStateException("Unable to create an instance of " + builderClass, e);
             }
         }));
